# filmr

./: .gitignore  Cargo.toml  README.md
src/: anime.rs  app.rs  cli.rs  client.rs  drama.rs  error.rs  film.rs  lib.rs  main.rs  movie.rs  scraper.rs  tv_series.rs
