[package]
name = "filmr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
csv = "1.3.0"
indicatif = "0.17.8"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["blocking"] }
scraper = "0.19.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
