[package]
name = "filmr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
colored = "2.2.0"
csv = "1.3.1"
futures = "0.3.31"
humantime = "2.3.0"
indicatif = "0.17.11"
regex = "1.11.3"
reqwest = "0.12.23"
scraper = "0.19.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tokio-utils = "0.1.2"
